deploy/manifests/frontend-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: homie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service
          image: frontend-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      resources:
        requests:
          memory: "60Mi"
          cpu: "100m"
        limits:
          memory: "128Mi"
          cpu: "500m"
