deploy/manifests/frontend-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: homie
spec:
  selector:
    app: frontend-service
  ports:
    - port: 80
      targetPort: 80
